--- a/demos-processingjs/lorenz-attractor/index.html
+++ b/demos-processingjs/lorenz-attractor/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Sketch using Procssing.js</title>
-    <script src="../bower_components/Processing.js/processing.min.js"></script>
 </head>
 <body>
 <canvas id="sketch"></canvas>
-<script src="sketch.js"></script>
+<script src="../bower_components/Processing.js/processing.js"></script>
+<script src="sketch-compiled.js"></script>
 </body>
 </html>
