--- a/demos-p5js/lorenz-attractor/index.html
+++ b/demos-p5js/lorenz-attractor/index.html
@@ -8,7 +8,7 @@
     <script src="../bower_components/p5.js/lib/addons/p5.dom.min.js" type="text/javascript"></script>
     <script src="../bower_components/p5.js/lib/addons/p5.sound.min.js" type="text/javascript"></script>
 
-    <script src="sketch.js" type="text/javascript"></script>
+    <script src="sketch-compiled.js" type="text/javascript"></script>
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
